methods.picture.PatternPicture.scala.error
Compilation error:
PatternPicture:14: error: not found: value gauhce
    gauhce()
    ^