methods.picture.PatternPicture.scala.code
override def run() {
  def dessin(c:Color) {
    setCouleurBrosse(c)
    avance()
    baisseBrosse()
    leveBrosse()
    gauche()
    avance()
    gauche()
    avance()
    baisseBrosse()
    leveBrosse()
    avance()
    gauhce()
    avance()
  }
}